--- a/index.html
+++ b/index.html
@@ -3,9 +3,30 @@
     <head>
         <meta charset="UTF-8">
         <title>Title</title>
+
+        <style>
+            h1{
+                color: #414f90;
+                font-size: 72px;
+            }
+
+            p{
+                font-size: 60px
+            }
+
+            #myid{
+                color: blueviolet;
+            }
+
+            .mycls{
+                color: brown;
+            }
+        </style>
     </head>
+
     <body>
         <h1>This is a heading</h1>
-        <p>This is a paragraph.</p>
+        <h2 id = myid>This is another heading</h2>
+        <p class = mycls>This is a paragraph.</p>
     </body>
 </html>
