--- a/index.html
+++ b/index.html
@@ -3,30 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Title</title>
-
-        <style>
-            h1{
-                color: #414f90;
-                font-size: 72px;
-            }
-
-            p{
-                font-size: 60px
-            }
-
-            #myid{
-                color: blueviolet;
-            }
-
-            .mycls{
-                color: brown;
-            }
-        </style>
+        <link rel="stylesheet" href="css/Design.css">
     </head>
 
     <body>
-        <h1>This is a heading</h1>
-        <h2 id = myid>This is another heading</h2>
-        <p class = mycls>This is a paragraph.</p>
+        <a href="Data.html">Click Me</a>
     </body>
 </html>
